# paymy

./: .gitignore  LICENSE  Makefile  README.md  __main__.py  eurofxref.csv  example_payments.py  expense_tracker.py  main.py  pyproject.toml
