[tool.poetry]
name = "expy"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
currencyconverter = "^0.17.32"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
pandas = "^2.2.3"
humanize = "^4.11.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
